{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 5,
  "lineage": "f74dec95-8031-edb0-49ab-f9dc7d095a9c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:442042553195:security-group/sg-052151205133756c6",
            "description": "sg_1",
            "egress": [],
            "id": "sg-052151205133756c6",
            "ingress": [],
            "name": "sg_1",
            "name_prefix": "",
            "owner_id": "442042553195",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0afc5b130a7ec8e80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442042553195",
            "id": "sg-052151205133756c6",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:442042553195:security-group-rule/sgr-0f798751d8e40f25a",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0f798751d8e40f25a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-052151205133756c6",
            "security_group_rule_id": "sgr-0f798751d8e40f25a",
            "tags": null,
            "tags_all": {},
            "to_port": 8888
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442042553195",
            "id": "sgr-0f798751d8e40f25a",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.sg_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ftp_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:442042553195:security-group-rule/sgr-0abbe8903c8061f60",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 21,
            "id": "sgr-0abbe8903c8061f60",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-052151205133756c6",
            "security_group_rule_id": "sgr-0abbe8903c8061f60",
            "tags": null,
            "tags_all": {},
            "to_port": 21
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442042553195",
            "id": "sgr-0abbe8903c8061f60",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.sg_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:442042553195:security-group-rule/sgr-00d242ace7db4fee5",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-00d242ace7db4fee5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-052151205133756c6",
            "security_group_rule_id": "sgr-00d242ace7db4fee5",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442042553195",
            "id": "sgr-00d242ace7db4fee5",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.sg_1"
          ]
        }
      ]
    }
  ]
}